<resources>
    <string name="app_name">Sticky Notes</string>
    <string name="TAG">TAG</string>
    <string name="title_home">Home</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_settings">Settings</string>

    <!-- Text Field labels -->
    <string name="title_label">Enter title</string>
    <string name="note_label">Enter note</string>
    <string name="datetime_label">Enter date and time(Optional)</string>
    <string name="add_note_label">add</string>

    <!-- Recycler View dummy text-->
    <string name="note_title_dummy">Note title</string>
    <string name="note_dummy">lorem ipsum dolor</string>
    <string name="note_datetime_dummy">datetime</string>

    <!-- Login form strings -->
    <string name="email_placeholder">Enter email</string>
    <string name="password_placeholder">Enter password</string>
    <string name="confirm_password_placeholder">Confirm password</string>
    <string name="login_label">Login</string>
    <string name="signup_label">Signup</string>
    <string name="logout_label">Logout</string>
    <string name="enable_floating_widget_label">Enable floating widget</string>

    <!-- Register form -->
    <string name="name_placeholder">Enter name</string>

</resources>
